--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,8 @@ build/
 
 # Mac OS X hidden files
 .DS_Store
-
+LossestScaling
+lsfg-vk-develop
 # Android Studio Navigation editor temp files
 .navigation/
 
